--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="uk">
 
 <head>
     <meta charset="UTF-8">
@@ -25,12 +25,12 @@
             <a href=""><img width="126" height="63" src="./images/лого.png" alt=""></a>
             <nav>
                 <ul class="nav-list">
-                    <li><a class="nav-link" href="">Головна</a></li>
-                    <li><a class="nav-link" href="">Каталог</a></li>
-                    <li><a class="nav-link" href="">Про нас</a></li>
-                    <li><a class="nav-link" href="">Як замовити</a></li>
-                    <li><a class="nav-link" href="">Відгуки </a></li>
-                    <li><a class="nav-link" href="">Контакти</a></li>
+                    <li><a class="nav-link" href="#">Головна</a></li>
+                    <li><a class="nav-link" href="#">Каталог</a></li>
+                    <li><a class="nav-link" href="#">Про нас</a></li>
+                    <li><a class="nav-link" href="#">Як замовити</a></li>
+                    <li><a class="nav-link" href="#">Відгуки </a></li>
+                    <li><a class="nav-link" href="#">Контакти</a></li>
                 </ul>
             </nav>
         </div>
@@ -42,7 +42,7 @@
             <h3 class="header-title"> Неймовірні </h3>
             <h1 class="header-text"> Букети <span class="header-span">зі свіжих квітів</span> </h1>
             <p class="text-p">З доставкою по Києву протягом 1 години</p>
-            <a class="header-btn" href="">ЗАМОВИТИ КВІТИ</a>
+            <a class="header-btn" href="#">ЗАМОВИТИ КВІТИ</a>
         </div>
        <ul class="head-list">
         <li class="head-item">
@@ -268,7 +268,7 @@
                     <img src="./images/image5.png" alt="">
                      <div class="flover-link2">
                         <img src="./images/seedling.png" alt="">
-                        <a class="flover-link-p" href="">Новинка</a>
+                        <a class="flover-link-p" href="##">Новинка</a>
                      </div>
                     <p class="flower-text">450 ₴</p>
                     <span class="flower-span">«Бархатний сезон»</span>
@@ -278,7 +278,7 @@
                     <img src="./images/image6.png" alt="">
                     <div class="flover-link2 pp">
                         <img src="./images/tint.png" alt="">
-                        <a class="flover-link-p" href="">з водою</a>
+                        <a class="flover-link-p" href="#">з водою</a>
                      </div>
                     <p class="flower-text">56 ₴</p>
                     <span class="flower-span">Нобіліс</span>
@@ -382,15 +382,15 @@
         <div class="footer-div">
             <div>
                 <ul class="footer-list">
-                    <li class="footer-item fl"><a class="nav-link" href="">Головна</a></li>
-                    <li class="footer-item fl"><a class="nav-link" href="">Каталог</a></li>
-                    <li class="footer-item fl"><a class="nav-link" href="">Відгуки </a></li>
-                    <li class="footer-item fl"><a class="nav-link" href="">Як замовити</a></li>
-                    <li class="footer-item fl"><a class="nav-link" href="">Контакти</a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="#">Головна</a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="#">Каталог</a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="#">Відгуки </a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="#">Як замовити</a></li>
+                    <li class="footer-item fl"><a class="nav-link" href="#">Контакти</a></li>
                 </ul>
             </div>
             <div class="footer-logo">
-                <a href=""><img width="264" height="137" src="./images/лого.png" alt=""></a>
+                <a href="#"><img width="264" height="137" src="./images/лого.png" alt=""></a>
                 <ul class="cosial-link">
                     <li><a href="tel:+380977775577" target="_blank"><img src="./images/phone.png" alt=""></a></li>
                     <li><a href="https://www.instagram.com/" target="_blank"><img src="./images/tviter.png" alt=""></a></li>
