--- a/index.html
+++ b/index.html
@@ -72,21 +72,21 @@
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="prise-200">
+                                    <input id="prise-200" class="chech" type="checkbox" name="">
                                     200 ₴
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png"  alt=""></button>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="prise-200-500">
+                                    <input id="prise-200-500" class="chech" type="checkbox" name="">
                                     200 - 500 ₴
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="prise-1000">
+                                    <input id="prise-1000" class="chech" type="checkbox" name="">
                                     > 1000 ₴
                                 </label></li>
                                 <button class="order-btn">Застосувати</button>
@@ -97,45 +97,45 @@
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="troi">
+                                    <input id="troi" class="chech" type="checkbox" name="">
                                     Троянда
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png" alt=""></button>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="austoma">
+                                    <input id="austoma" class="chech" type="checkbox" name="">
                                     Еустома
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="chri">
+                                    <input id="chri" class="chech" type="checkbox" name="">
                                     Хризантема
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="lil">
+                                    <input id="lil" class="chech" type="checkbox" name="">
                                     Лілія
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="tul">
+                                    <input id="tul" class="chech" type="checkbox" name="">
                                     Тюльпан
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="gor">
+                                    <input id="gor" class="chech" type="checkbox" name="">
                                     Гортензія
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="al">
+                                    <input id="al" class="chech" type="checkbox" name="">
                                     Альстромерія
                                 </label>
                             </li>
@@ -147,15 +147,15 @@
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="wumen">
+                                    <input id="wumen" class="chech" type="checkbox" name="">
                                     Жінці
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png"  alt=""></button>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="man">
+                                    <input id="man" class="chech" type="checkbox" name="">
                                     Чоловіку
                                 </label>
                             </li>
@@ -167,27 +167,27 @@
                         <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="vel">
+                                    <input id="vel" class="chech" type="checkbox" name="">
                                     Весілля
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png"  alt=""></button>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="bith">
+                                    <input id="bith" class="chech" type="checkbox" name="">
                                     Народження 
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="love">
+                                    <input id="love" class="chech" type="checkbox" name="">
                                     Кохання
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="spiv">
+                                    <input id="spiv" class="chech" type="checkbox" name="">
                                     Співчуваю
                                 </label>
                             </li>
@@ -199,33 +199,33 @@
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="free">
+                                    <input id="free" class="chech" type="checkbox" name="">
                                     Вільний
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png"  alt=""></button>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="carc">
+                                    <input id="carc" class="chech" type="checkbox" name="">
                                     Каркасний
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="inbox">
+                                    <input id="inbox" class="chech" type="checkbox" name="">
                                     В коробці
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="but">
+                                    <input id="but" class="chech" type="checkbox" name="">
                                     В кошику
                                 </label>
                             </li>
                             <li class="order-item">
-                                <label for="">
-                                    <input class="chech" type="checkbox" name="">
+                                <label for="kack">
+                                    <input id="kack" class="chech" type="checkbox" name="">
                                     Каскадний
                                 </label>
                             </li>
