--- a/index.html
+++ b/index.html
@@ -73,20 +73,20 @@
                         <ul class="order">
                             <li class="order-item">
                                 <label for="prise-200">
-                                    <input id="prise-200" class="chech" type="checkbox" name="">
+                                    <input id="prise-200" class="check" type="checkbox" name="prise-200">
                                     200 ₴
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png"  alt=""></button>
                             </li>
                             <li class="order-item">
                                 <label for="prise-200-500">
-                                    <input id="prise-200-500" class="chech" type="checkbox" name="">
+                                    <input id="prise-200-500" class="check" type="checkbox" name="prise-200-500">
                                     200 - 500 ₴
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="prise-1000">
-                                    <input id="prise-1000" class="chech" type="checkbox" name="">
+                                    <input id="prise-1000" class="check" type="checkbox" name="prise-1000">
                                     > 1000 ₴
                                 </label></li>
                                 <button class="order-btn">Застосувати</button>
@@ -98,44 +98,44 @@
                         <ul class="order">
                             <li class="order-item">
                                 <label for="troi">
-                                    <input id="troi" class="chech" type="checkbox" name="">
+                                    <input id="troi" class="check" type="checkbox" name="troi">
                                     Троянда
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png" alt=""></button>
                             </li>
                             <li class="order-item">
                                 <label for="austoma">
-                                    <input id="austoma" class="chech" type="checkbox" name="">
+                                    <input id="austoma" class="check" type="checkbox" name="austoma">
                                     Еустома
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="chri">
-                                    <input id="chri" class="chech" type="checkbox" name="">
+                                    <input id="chri" class="check" type="checkbox" name="chri">
                                     Хризантема
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="lil">
-                                    <input id="lil" class="chech" type="checkbox" name="">
+                                    <input id="lil" class="check" type="checkbox" name="lil">
                                     Лілія
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="tul">
-                                    <input id="tul" class="chech" type="checkbox" name="">
+                                    <input id="tul" class="check" type="checkbox" name="tul">
                                     Тюльпан
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="gor">
-                                    <input id="gor" class="chech" type="checkbox" name="">
+                                    <input id="gor" class="check" type="checkbox" name="gor">
                                     Гортензія
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="al">
-                                    <input id="al" class="chech" type="checkbox" name="">
+                                    <input id="al" class="check" type="checkbox" name="al">
                                     Альстромерія
                                 </label>
                             </li>
@@ -147,15 +147,15 @@
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
-                                <label for="wumen">
-                                    <input id="wumen" class="chech" type="checkbox" name="">
+                                <label for="vuman">
+                                    <input id="vuman" class="check" type="checkbox" name="vuman">
                                     Жінці
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png"  alt=""></button>
                             </li>
                             <li class="order-item">
                                 <label for="man">
-                                    <input id="man" class="chech" type="checkbox" name="">
+                                    <input id="man" class="check" type="checkbox" name="man">
                                     Чоловіку
                                 </label>
                             </li>
@@ -168,26 +168,26 @@
                         <ul class="order">
                             <li class="order-item">
                                 <label for="vel">
-                                    <input id="vel" class="chech" type="checkbox" name="">
+                                    <input id="vel" class="check" type="checkbox" name="vel">
                                     Весілля
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png"  alt=""></button>
                             </li>
                             <li class="order-item">
                                 <label for="bith">
-                                    <input id="bith" class="chech" type="checkbox" name="">
+                                    <input id="bith" class="check" type="checkbox" name="bith">
                                     Народження 
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="love">
-                                    <input id="love" class="chech" type="checkbox" name="">
+                                    <input id="love" class="check" type="checkbox" name="love">
                                     Кохання
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="spiv">
-                                    <input id="spiv" class="chech" type="checkbox" name="">
+                                    <input id="spiv" class="check" type="checkbox" name="spiv">
                                     Співчуваю
                                 </label>
                             </li>
@@ -200,32 +200,32 @@
                         <ul class="order">
                             <li class="order-item">
                                 <label for="free">
-                                    <input id="free" class="chech" type="checkbox" name="">
+                                    <input id="free" class="check" type="checkbox" name="free">
                                     Вільний
                                 </label>
                                 <button class="order-close"><img src="./images/close1.png"  alt=""></button>
                             </li>
                             <li class="order-item">
                                 <label for="carc">
-                                    <input id="carc" class="chech" type="checkbox" name="">
+                                    <input id="carc" class="check" type="checkbox" name="carc">
                                     Каркасний
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="inbox">
-                                    <input id="inbox" class="chech" type="checkbox" name="">
+                                    <input id="inbox" class="check" type="checkbox" name="inbox">
                                     В коробці
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="but">
-                                    <input id="but" class="chech" type="checkbox" name="">
+                                    <input id="but" class="check" type="checkbox" name="but">
                                     В кошику
                                 </label>
                             </li>
                             <li class="order-item">
                                 <label for="kack">
-                                    <input id="kack" class="chech" type="checkbox" name="">
+                                    <input id="kack" class="check" type="checkbox" name="kack">
                                     Каскадний
                                 </label>
                             </li>
