--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
                                 </label></li>
                                 <button class="order-btn">Застосувати</button>
                         </ul>
+
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Квіти ...</span>
@@ -164,7 +165,7 @@
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Привід ...</span>
-                        <button class="prise-link" href=""><img src="./images/down.png" alt=""></button>
+                        <button class="prise-link"><img src="./images/down.png" alt=""></button>
                         <ul class="order">
                             <li class="order-item">
                                 <label for="vel">
@@ -241,7 +242,7 @@
                 <li class="flower-item" >
                     <img class="heart" src="./images/heart.png" alt="">
                     <img src="./images/image1.png" alt="">
-                    <button class="flover-link" href="">Акція</button>
+                    <button class="flover-link">Акція</button>
                     <p class="flower-text">500 ₴<span class="span-text-text">700 ₴</span></p>
                     <span class="flower-span">Мінібукет 1400-2</span>
                 </li>
@@ -268,7 +269,7 @@
                     <img src="./images/image5.png" alt="">
                      <div class="flover-link2">
                         <img src="./images/seedling.png" alt="">
-                        <a class="flover-link-p" href="##">Новинка</a>
+                        <a class="flover-link-p" href="#">Новинка</a>
                      </div>
                     <p class="flower-text">450 ₴</p>
                     <span class="flower-span">«Бархатний сезон»</span>
@@ -327,7 +328,7 @@
         <div class="response-div">
             <div class="form-div">
                 <h4 class="form-title"> <span class="form-span">Відправте заявку  <br></span> і Вам зателефонують <br> протягом однієї хвилини</h4>
-                <form class="form" action="">
+                <form class="form" action="#">
                     <input class="input" type="text" placeholder="Ім’я">
                     <input class="input" type="tel" placeholder="Телефон">
                     <button class="form-btn js-btnReq" type="button">Залишити заявку</button>
@@ -375,7 +376,7 @@
 
           <div id="imageModal" class="modal11">
             <!-- <span class="close">&times;</span> -->
-            <img class="modal-content" id="modalImage">
+            <img class="modal-content" id="modalImage" alt="">
         </div>
     </section>
     <section class="footer">
