--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
         
     </section>
     <section class="client">
+        <h2 class="visually-hidden">Наші клієнти</h2>
         <div class="swiper">
             <div class="swiper-wrapper">
               <div class="swiper-slide"><img src="./images/1.png" alt=""></div>
@@ -376,7 +377,10 @@
 
           <div id="imageModal" class="modal11">
             <!-- <span class="close">&times;</span> -->
-            <img class="modal-content" id="modalImage" alt="">
+            <!-- <img src="" class="modal-content" id="modalImage" alt=""> -->
+            <img src="placeholder.jpg" class="modal-content" id="modalImage" alt="Placeholder Image">
+
+
         </div>
     </section>
     <section class="footer">
