--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Roboto:ital@0;1&family=Source+Sans+3:wght@200..900&family=Work+Sans&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" /> -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+
 </head>
 
 <body>
@@ -384,6 +386,7 @@
         </div>
     </section>
     <section class="footer">
+        <h2 class="visually-hidden">cosial</h2>
         <div class="footer-div">
             <div>
                 <ul class="footer-list">
