--- a/index.html
+++ b/index.html
@@ -72,27 +72,31 @@
                     <li class="prise-item">
                         <span class="prise-item">Ціна ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
-                        <ul class="order">
-                            <li class="order-item">
-                                <label for="prise-200">
-                                    <input id="prise-200" class="check" type="checkbox" name="prise-200">
-                                    200 ₴
-                                </label>
-                                <button class="order-close"><img src="./images/close1.png"  alt=""></button>
-                            </li>
-                            <li class="order-item">
-                                <label for="prise-200-500">
-                                    <input id="prise-200-500" class="check" type="checkbox" name="prise-200-500">
-                                    200 - 500 ₴
-                                </label>
-                            </li>
-                            <li class="order-item">
-                                <label for="prise-1000">
-                                    <input id="prise-1000" class="check" type="checkbox" name="prise-1000">
-                                    > 1000 ₴
-                                </label></li>
-                                <button class="order-btn">Застосувати</button>
-                        </ul>
+                        <div>
+                            <ul class="order">
+                                <li class="order-item">
+                                    <label for="prise-200">
+                                        <input id="prise-200" class="check" type="checkbox" name="prise-200">
+                                        200 ₴
+                                    </label>
+                                    <button class="order-close"><img src="./images/close1.png" alt=""></button>
+                                </li>
+                                <li class="order-item">
+                                    <label for="prise-200-500">
+                                        <input id="prise-200-500" class="check" type="checkbox" name="prise-200-500">
+                                        200 - 500 ₴
+                                    </label>
+                                </li>
+                                <li class="order-item">
+                                    <label for="prise-1000">
+                                        <input id="prise-1000" class="check" type="checkbox" name="prise-1000">
+                                        > 1000 ₴
+                                    </label>
+                                </li>
+                                
+                            </ul>
+                            <button class="order-btn">Застосувати</button>
+                        </div>
 
                     </li>
                     <li class="prise-item">
@@ -148,26 +152,29 @@
                     <li class="prise-item">
                         <span class="prise-item">Кому ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
-                        <ul class="order">
-                            <li class="order-item">
-                                <label for="vuman">
-                                    <input id="vuman" class="check" type="checkbox" name="vuman">
-                                    Жінці
-                                </label>
-                                <button class="order-close"><img src="./images/close1.png"  alt=""></button>
-                            </li>
-                            <li class="order-item">
-                                <label for="man">
-                                    <input id="man" class="check" type="checkbox" name="man">
-                                    Чоловіку
-                                </label>
-                            </li>
-                                <button class="order-btn">Застосувати</button>
-                        </ul>
+                        <div>
+                            <ul class="order">
+                                <li class="order-item">
+                                    <label for="vuman">
+                                        <input id="vuman" class="check" type="checkbox" name="vuman">
+                                        Жінці
+                                    </label>
+                                    <button class="order-close"><img src="./images/close1.png" alt=""></button>
+                                </li>
+                                <li class="order-item">
+                                    <label for="man">
+                                        <input id="man" class="check" type="checkbox" name="man">
+                                        Чоловіку
+                                    </label>
+                                </li>
+                            </ul>
+                            <button class="order-btn">Застосувати</button>
+                        </div>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Привід ...</span>
                         <button class="prise-link"><img src="./images/down.png" alt=""></button>
+                        <div>
                         <ul class="order">
                             <li class="order-item">
                                 <label for="vel">
@@ -194,12 +201,14 @@
                                     Співчуваю
                                 </label>
                             </li>
-                                <button class="order-btn">Застосувати</button>
                         </ul>
+                        <button class="order-btn">Застосувати</button>
+                    </div>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Стиль ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
+                        <div>
                         <ul class="order">
                             <li class="order-item">
                                 <label for="free">
@@ -232,8 +241,9 @@
                                     Каскадний
                                 </label>
                             </li>
-                                <button class="order-btn">Застосувати</button>
                         </ul>
+                        <button class="order-btn">Застосувати</button>
+                    </div>
                     </li>
                 </ul>
             </div>
