--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                     <li class="prise-item">
                         <span class="prise-item">Ціна ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
-                        <div>
-                            <ul class="order">
+                        <div class="order">
+                            <ul>
                                 <li class="order-item">
                                     <label for="prise-200">
                                         <input id="prise-200" class="check" type="checkbox" name="prise-200">
@@ -102,7 +102,8 @@
                     <li class="prise-item">
                         <span class="prise-item">Квіти ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
-                        <ul class="order">
+                        <div class="order">
+                        <ul>
                             <li class="order-item">
                                 <label for="troi">
                                     <input id="troi" class="check" type="checkbox" name="troi">
@@ -146,14 +147,15 @@
                                     Альстромерія
                                 </label>
                             </li>
-                            <button class="order-btn">Застосувати</button>
                         </ul>
+                        <button class="order-btn">Застосувати</button>
+                    </div>
                     </li>
                     <li class="prise-item">
                         <span class="prise-item">Кому ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
-                        <div>
-                            <ul class="order">
+                        <div class="order">
+                            <ul>
                                 <li class="order-item">
                                     <label for="vuman">
                                         <input id="vuman" class="check" type="checkbox" name="vuman">
@@ -174,8 +176,8 @@
                     <li class="prise-item">
                         <span class="prise-item">Привід ...</span>
                         <button class="prise-link"><img src="./images/down.png" alt=""></button>
-                        <div>
-                        <ul class="order">
+                        <div class="order">
+                        <ul>
                             <li class="order-item">
                                 <label for="vel">
                                     <input id="vel" class="check" type="checkbox" name="vel">
@@ -208,8 +210,8 @@
                     <li class="prise-item">
                         <span class="prise-item">Стиль ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
-                        <div>
-                        <ul class="order">
+                        <div class="order">
+                        <ul>
                             <li class="order-item">
                                 <label for="free">
                                     <input id="free" class="check" type="checkbox" name="free">
