--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <span class="prise-item">Ціна ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <div class="order">
-                            <ul>
+                            <ul class="order-list">
                                 <li class="order-item">
                                     <label for="prise-200">
                                         <input id="prise-200" class="check" type="checkbox" name="prise-200">
@@ -100,7 +100,7 @@
                         <span class="prise-item">Квіти ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <div class="order">
-                        <ul>
+                        <ul class="order-list">
                             <li class="order-item">
                                 <label for="troi">
                                     <input id="troi" class="check" type="checkbox" name="troi">
@@ -152,7 +152,7 @@
                         <span class="prise-item">Кому ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <div class="order">
-                            <ul>
+                            <ul class="order-list">
                                 <li class="order-item">
                                     <label for="vuman">
                                         <input id="vuman" class="check" type="checkbox" name="vuman">
@@ -174,7 +174,7 @@
                         <span class="prise-item">Привід ...</span>
                         <button class="prise-link"><img src="./images/down.png" alt=""></button>
                         <div class="order">
-                        <ul>
+                        <ul class="order-list">
                             <li class="order-item">
                                 <label for="vel">
                                     <input id="vel" class="check" type="checkbox" name="vel">
@@ -208,7 +208,7 @@
                         <span class="prise-item">Стиль ...</span>
                         <button class="prise-link" type="button"><img src="./images/down.png" alt=""></button>
                         <div class="order">
-                        <ul>
+                        <ul class="order-list">
                             <li class="order-item">
                                 <label for="free">
                                     <input id="free" class="check" type="checkbox" name="free">
